# API-Prime

./: .flake8  .mypy.ini  .pre-commit-config.yaml  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
.devcontainer/: Dockerfile  dev_install  devcontainer.json  license_checker.py  license_header.txt
.github/workflows/: static_code_analysis.yaml  unit_and_int_test.yaml
api_prime/: __init__.py
api_primed/: __init__.py  api_spec.py  requests.py
apiprimed/: __init__.py  api_spec.py  applications.py  exceptions.py  requests.py  responses.py  router.py  routes.py  routing.py  spec.py  utils.py
examples/: README.md
examples/greet_app/: __init__.py  __main__.py  api.py  spec.py
experiments/: experiment_openapi_core_requests.py  openapi.yaml  send_invalid_request.py  send_request.py  starlette_openapi_core.py
scripts/: license_checker.py
tests/: test_api_spec.py  test_requests.py  test_responses.py  test_routing.py
tests/fixtures/: __init__.py  routes.py  specs.py  starlette.py
tests/fixtures/specs/: greet_api.json  greet_api.yaml
tests/unit/: __init__.py  test_api_spec.py  test_api_spec_handling.py  test_requests.py  test_responses.py  test_routing.py
tests/unit/fixtures/: __init__.py  routes.py  specs.py  starlette.py  utils.py
tests/unit/fixtures/specs/: greet_api.json
