# Copyright 2021 - 2022 Kersten Henrik Breuer (kersten-breuer@outlook.com)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = apiprimed
version = attr: apiprimed.__version__
description = An ASGI framework for documentation-driven API design (API-first) based on OpenAPI 3.0+ and Starlette
url = https://github.com/ghga-de/microservice-repository-template
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Kersten Henrik Breuer
author_email = kersten-breuer@outlook.com
license = Apache 2.0
classifiers =
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Topic :: Internet :: WWW/HTTP :: HTTP Servers

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    PyYAML
    starlette
    openapi_core
    pydantic
    uvicorn
python_requires = >= 3.7

[options.extras_require]
# Please adapt to package name
dev =
    setuptools_scm!=6.3.0
    pytest==7.1.1
    pytest-asyncio==0.18.3
    pytest-cov==3.0.0
    mypy==0.942
    mypy-extensions==0.4.3
    pylint==2.13.3
    click==8.1.2
    black==22.3.0
    flake8==4.0.1
    isort==5.10.1
    bandit==1.7.4
    pre-commit==2.17.0
    requests==2.27.1
    pyupgrade==2.34.0
all =
    %(dev)s

[options.packages.find]
exclude = tests
